Corrected the spacing

--- a/src/assets/_project/_blocks/layout/content/_location-setter.scss
+++ b/src/assets/_project/_blocks/layout/content/_location-setter.scss
@@ -140,7 +140,7 @@
         background-color: transparent;
         border: 0;
         color: $qg-pagination-border;
-        margin-top: 25px;
+        margin-top: 30px;
         padding: 0;
         text-decoration: underline;
     }
