--- a/src/assets/_project/_blocks/layout/footer/_service-centre.scss
+++ b/src/assets/_project/_blocks/layout/footer/_service-centre.scss
@@ -72,7 +72,7 @@
     }
 
     .qg-location-setter {
-        padding-top: 20px;
+        padding-top: 15px;
         padding-bottom: 30px;
         transition: all .3s ease;
     }
