--- a/src/assets/_project/_blocks/layout/footer/_site-footer.scss
+++ b/src/assets/_project/_blocks/layout/footer/_site-footer.scss
@@ -47,7 +47,7 @@
     }
 
     hr {
-        margin: 30px 0 15px;
+        margin: 30px 0;
         border-color: rgba(255,255,255,0.25);
     }
 
